# ECON499

./: .gitignore  AGENTS.md  Makefile  README.md  e2e.md  error_log.md  fixes.md  implementation_plan.md  main_idea.md  paper.md  pyproject.toml  results.md
configs/data/: cleaning.yaml  features.yaml  raw.mac.yaml  raw.yaml  surface.yaml
configs/eval/: hedging.yaml  metrics.yaml  report_artifacts.yaml  stats_tests.yaml  walkforward.yaml
configs/models/: elasticnet.yaml  har_factor.yaml  lightgbm.mac_cpu.yaml  lightgbm.yaml  neural_surface.mac_cpu.yaml  neural_surface.windows_cuda.yaml  neural_surface.yaml  random_forest.yaml  ridge.yaml
configs/workflow/: hpo_100_trials.yaml  hpo_30_trials.yaml  train_100_epochs.yaml  train_30_epochs.yaml
provenance/tuning_diagnostics/: diagnostics_export_index.json  neural_surface__diagnostics.csv  neural_surface__diagnostics.json  neural_surface__diagnostics_summary.json
scripts/: 01_ingest_cboe.py  02_build_option_panel.py  03_build_surfaces.py  04_build_features.py  05_tune_models.py  06_run_walkforward.py  07_run_stats.py  08_run_hedging_eval.py  09_make_report_artifacts.py  check_runtime.py  clean_pipeline_artifacts.py  export_tuning_diagnostics.py  install_mac_lightgbm_no_openmp.py  official_smoke.py  write_provenance_supplement.py
src/ivsurf/: __init__.py  calendar.py  cleanup.py  config.py  exceptions.py  progress.py  reproducibility.py  resume.py  runtime_preflight.py  schemas.py  workflow.py
tests/e2e/: test_official_smoke_runtime.py
tests/integration/: test_early_close_stage02.py  test_neural_imputed_cell_supervision.py  test_official_default_path_pipeline.py  test_report_stage_contract.py  test_resume_stage01.py  test_sample_window_enforcement.py  (+9 more)
(+219 files in other folders)
